star translation started

--- a/star/index.html
+++ b/star/index.html
@@ -196,7 +196,7 @@
                     <img class="cmPic logo-star fs-lazy"
                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                          data-src="../images/star/logo-star.png" alt="Vsmart">
-                    <h2 class="star-title fs-center">GO FROM STAR CHASER TO STAR POWER </h2>
+                    <h2 class="star-title fs-center">ЗВЕЗДА РОДИЛАСЬ</h2>
                 </div>
                 <div class="fs-banner-box">
                     <div class="fs-area-pic rotateScaleLeft">
@@ -210,27 +210,27 @@
                         <img class="cmPic logo-star fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              data-src="../images/star/logo-star-pc.png" alt="Vsmart">
-                        <h2 class="star-title">GO FROM STAR CHASER<br />TO STAR POWER </h2>
+                        <h2 class="star-title">ЗВЕЗДА РОДИЛАСЬ</h2>
                     </div>
                     <ul class="fs-pc list-function">
                         <li>
                             <img class="cmPic img-func fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-120.png" alt="Màn hình giọt nước">
-                            <span>Waterdrop 5.7”<br /> HD+ screen</span>
+                            <span>Дисплей<br /> 5.7” IPS HD+</span>
                         </li>
                         <li>
                             <img class="cmPic img-func fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-119.png" alt="Camera kép">
-                            <span>Dual camera<br />8MP + 2MP</span>
+                            <span>Двойная камера<br /> (8МП + 2МП)</span>
                         </li>
                         <li>
                             <img class="cmPic img-func fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-123.png" alt="Chip Qualcomm">
                             <span>
-                                Qualcomm<br />SnapDragron 215 processor
+                                Процессор<br/> Qualcomm<br /> 215
                             </span>
                         </li>
                         <li>
@@ -238,7 +238,7 @@
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-125.png" alt="16 GB ROM">
                             <span>
-                                16 GB ROM
+                                16ГБ<br/> внутренней памяти
                             </span>
                         </li>
                         <li>
@@ -246,7 +246,7 @@
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-124.png" alt="Pin 3000mAh và sạc nhanh 10W">
                             <span>
-                                3000 mAh battery <br /> Quick charge 10W
+                                Батарея 3000 мАч <br /> 10-вт Quick Charge
                             </span>
                         </li>
                     </ul>
@@ -255,14 +255,14 @@
                             <img class="cmPic img-func fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-120.png" alt="Màn hình giọt nước">
-                            <span>Waterdrop 5.7”<br /> HD+ screen</span>
+                            <span>Дисплей<br /> 5.7” IPS HD+</span>
                         </li>
                         <li>
                             <img class="cmPic img-func fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-123.png" alt="Chip Qualcomm">
                             <span>
-                                Qualcomm <br />SnapDragron 215 processor
+                                Процессор<br/> Qualcomm<br /> 215
                             </span>
                         </li>
                         <li>
@@ -270,21 +270,21 @@
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-124.png" alt="Pin 3000mAh và sạc nhanh 10W">
                             <span>
-                                3000 mAh battery <br /> Quick charge 10W
+                                Батарея 3000 мАч <br /> 10-вт Quick Charge
                             </span>
                         </li>
                         <li>
                             <img class="cmPic img-func fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-119.png" alt="Camera kép">
-                            <span>Dual camera<br />8MP + 2MP</span>
+                            <span>Двойная камера<br /> (8МП + 2МП)</span>
                         </li>
                         <li>
                             <img class="cmPic img-func fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/star-125.png" alt="16 GB ROM">
                             <span>
-                                16 GB ROM
+                                16ГБ<br/> внутренней памяти
                             </span>
                         </li>
                     </ul>
@@ -315,12 +315,8 @@
                          class="cmPic img-drop fs-lazy is-mobile fadeTopTransform">
                 </div>
                 <div class="fs-area-txt">
-                    <h2 class="star-title">FULLER SCREEN,<br />FULLER EXPERIENCE</h2>
-                    <p class="star-desc">
-                        Immerse yourself in the space-maximizing 5.71″ ultra-wide
-                        Waterdrop HD+ display, with 2.5D glass and a 19:9 ratio to enjoy a full-on visual
-                        experience.
-                    </p>
+                    <h2 class="star-title">БОЛЬШЕ ДИСПЛЕЙ, <br />БОЛЬШЕ ВПЕЧАТЛЕНИЙ</h2>
+                    <p class="star-desc">Наслаждайтесь полноценным визуальным восприятием на сверхшироком дисплее Waterdrop HD+ с диагональю 5,71 дюйма, 2,5-дюймовым скругленным стеклом и соотношением сторон 19:9.</p>
                     <img class="cmPic fs-lazy fadeTopTransform"
                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                          data-src="../images/star/571hd.png" alt="5.71 HD+">
@@ -332,10 +328,8 @@
     <div class="fs-section is-design">
         <div class="fs-section-inr">
             <div class="fs-title-header">
-                <h2 class="star-title fs-center">BE A FASHION STAR WITH TRENDY COLORS </h2>
-                <p class="star-desc fs-center">
-                    Stand out wherever you go with colors that never go out of style!
-                </p>
+                <h2 class="star-title fs-center">ЦВЕТ ЗАДАЕТ НАСТРОЕНИЕ</h2>
+                <p class="star-desc fs-center">Благодаря 3D-дизайну и яркому Star и его владелец всегда в центре внимания.</p>
             </div>
             <div class="fs-box fs-has-layout">
                 <div class="fs-area-txt">
@@ -345,19 +339,19 @@
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/c-green.png" alt=""
                                  class="cmPic imgColor fs-lazy fadeTopTransform">
-                            <span>Lapis Blue</span>
+                            <span>Lapis Blue / Лазурно синий</span>
                         </li>
                         <li class="color" data-color="pink" data-url="/images/star/group-phone-pink.png">
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/c-pink.png" alt=""
                                  class="cmPic imgColor fs-lazy fadeTopTransform">
-                            <span>Living Coral</span>
+                            <span>Living Coral / Коралловый</span>
                         </li>
                         <li class="color" data-color="black" data-url="/images/star/group-phone-black.png">
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                  data-src="../images/star/c-black.png" alt=""
                                  class="cmPic imgColor fs-lazy fadeTopTransform">
-                            <span>Phantom Black</span>
+                            <span>Phantom Black / Черный фантом</span>
                         </li>
                     </ul>
                     <div class="fs-area-pic">
@@ -391,15 +385,8 @@
                      data-src="../images/star/chip.png" alt="Qualcomm Snapdragon 215"
                      class="cmPic fs-lazy img-chip fadeIn">
 
-                <h2 class="star-title fs-center">
-                    PIONEERING WITH THE WORLD’S FIRST QUALCOMM<br />SNAPDRAGON 215
-                    EVER
-                </h2>
-                <p class="star-desc fs-center">
-                    The first smartphone in the world equipped with the new Qualcomm® SnapdragonTM 215 64-bit
-                    processor – greater performance,
-                    lower consumption and greater fluidity to enjoy your favourite videos, series or games.
-                    45% CPU performance gain 28% GPU performance gain versus older versions.
+                <h2 class="star-title fs-center">ПЕРВЫЙ В МИРЕ СМАРТФОН С ПРОЦЕССОРОМ <br/>QUALCOMM SNAPDRAGON 215</h2>
+                <p class="star-desc fs-center">Star - первый смартфон в мире с новым процессором Qualcomm® 215, который обеспечит вам отличную производительность и еще более низкое энергопотребление.</p>
             </div>
         </div>
     </div>
@@ -408,41 +395,29 @@
         <div class="fs-section-inr">
             <div class="fs-box fs-has-layout">
                 <div class="fs-header-txt-mobile is-mobile">
-                    <h2 class="star-title fs-center">OWN THE SPOTLIGHT <br>WITH PORTRAIT MODE</h2>
-                    <p class="star-desc fs-center">
-                        Star’s dual camera explore the full potential of portrait
-                        mode with an impeccable bokeh effect:
-                        it creates a depth map, isolates figures and highlights faces. The integrated Face
-                        Beauty mode captures your best side with clearer,
-                        brighter pictures.
-                    </p>
+                    <h2 class="star-title fs-center">ПОЛУЧИТЕ МАКСИМУМ <br/>ОТ ПОРТРЕТНОГО РЕЖИМА СЪЕМКИ</h2>
+                    <p class="star-desc fs-center">Двойная камера Star использует весь потенциал портретного режима с безупречным эффектом боке: она создает эффект глубины, выделяет объект съемки и делает акцент на лице. Покажите себя миру с лучшей стороны с помощью встроенной функции Face Beauty.</p>
                 </div>
                 <div class="fs-banner-box">
                     <div class="fs-area-pic rotateScaleLeft">
                         <img class="cmPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                             data-src="../images/star/beauty-before.png" alt="Chụp chân dung vi diệu">
+                             data-src="../images/star/beauty-before.png" alt="">
                         <img class="cmPic fs-lazy cmPic-after"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                             data-src="../images/star/beauty-after.png" alt="Chụp chân dung vi diệu">
+                             data-src="../images/star/beauty-after.png" alt="">
                     </div>
                 </div>
                 <div class="fs-area-txt">
                     <div class="is-pc">
-                        <h2 class="star-title">OWN THE SPOTLIGHT WITH PORTRAIT MODE</h2>
-                        <p class="star-desc">
-                            Star’s dual camera explore the full potential of portrait mode with
-                            an impeccable bokeh effect:
-                            it creates a depth map, isolates figures and highlights faces. The integrated Face
-                            Beauty mode captures your best side with clearer,
-                            brighter pictures.
-                        </p>
+                        <h2 class="star-title">ПОЛУЧИТЕ МАКСИМУМ ОТ ПОРТРЕТНОГО РЕЖИМА СЪЕМКИ</h2>
+                        <p class="star-desc">Двойная камера Star использует весь потенциал портретного режима с безупречным эффектом боке: она создает эффект глубины, выделяет объект съемки и делает акцент на лице. Покажите себя миру с лучшей стороны с помощью встроенной функции Face Beauty.</p>
                     </div>
                     <div>
                         <div id="player">
                             <div id="volume"></div>
-                            <span class="before">Original Photo</span>
-                            <span class="after">Face beauty</span>
+                            <span class="before">ОРИГИНАЛЬНОЕ ФОТО</span>
+                            <span class="after">РЕЖИМ БЬЮТИФИКАЦИИ</span>
                         </div>
                         <ul class="beauty">
                             <li class="fadeIn">
