--- a/bee/index.html
+++ b/bee/index.html
@@ -399,7 +399,7 @@
         <div class="fs-box">
             <div class="fs-area-txt">
                 <h2>ЛОВИ МОМЕНТ С&nbsp;HDR-КАМЕРОЙ BEE</h2>
-                <p>Каждый момент становится живее и&nbsp;ярче благодаря 8-мегапиксельной камере смартфона Bee и&nbsp;интеллектуальному режиму HDR, который позволяет делать отличные снимки даже в&nbsp;услових плохого освещения.</p>
+                <p>Каждый момент становится живее и&nbsp;ярче благодаря <span style="white-space: nowrap;">8-мегапиксельной</span> камере смартфона Bee и&nbsp;интеллектуальному режиму HDR, который позволяет делать отличные снимки даже в&nbsp;услових плохого освещения.</p>
 
                 <div class="fs-camera-icons">
                     <ul style="display:flex;align-items:center;">
