--- a/joy-2-plus/index.html
+++ b/joy-2-plus/index.html
@@ -175,7 +175,7 @@
         <div class="h1">СМАРТФОН ДЛЯ ПОКОЛЕНИЯ, <br />КОТОРОЕ НИКОГДА НЕ СПИТ</div>
         <div class="xd-txt">Камера с функцией искусственного интеллекта и сверхъемкий аккумулятор позволят вам общаться, создавать  контент, и делиться им  сколько угодно и где угодно без ограничений.</div>
         <div class="video-btn mg-center">
-            <a data-video="https://www.youtube.com/embed/UfmHY81YJuA?rel=0;&autoplay=1" class="vd-btn">Смотреть видео</a>
+            <a data-video="https://www.youtube.com/embed/Ypxv2mWeOpQ?rel=0;&autoplay=1" class="vd-btn">Смотреть видео</a>
         </div>
     </div>
     <div class="s1-phone mg-center">
@@ -210,7 +210,7 @@
 <section id="rear-camera" class="xd-section sec3">
     <div class="info s3-info mg-center">
         <div class="h2">ЛОВИ МОМЕНТ</div>
-        <div class="xd-txt">Двойная камера (13Мп+5Мп) позволяет делать снимки самых ярких моментов , происходящих вокруг вас , которыми можно делиться с кем угодно и когда угодно</div>
+        <div class="xd-txt">Двойная камера (13Мп+5Мп) позволяет делать снимки самых ярких моментов, происходящих вокруг вас, которыми можно делиться с кем угодно и когда угодно</div>
         <div class="s3-icons mg-center">
             <img src="../images/joy-2-plus/s3-icons-ru.png">
         </div>
@@ -227,7 +227,7 @@
 
 <section id="camera-bokeh" class="xd-section sec4">
     <div class="info s4-info mg-center">
-        <div class="h2">БЕЗУПРЕЧНАЯ ПОРТРЕТНАЯ ФОТОСЬЕМКА</div>
+        <div class="h2">БЕЗУПРЕЧНАЯ ПОРТРЕТНАЯ ФОТОСЪЕМКА</div>
         <div class="xd-txt">Двойная камера распознает глубину резкости, размывает фон и четко фокусируется на объекте съемки благодаря эффекту боке. Функция Face Beauty подчеркивает естественную красоту лица и устраняет незначительные недостатки.</div>
     </div>
     <div class="s4-phone-box mg-center">
@@ -302,7 +302,7 @@
 
 <section id="battery" class="xd-section sec8">
     <div class="s8-phone mg-center">
-        <img src="../images/joy-2-plus/s8-phone2.png" class="s8-phone-overlay">
+        <img src="../images/joy-2-plus/s8-phone2-ru.png" class="s8-phone-overlay">
         <div id="animation_containerBattery" class="s8-phone-pic s8-canvas">
             <canvas id="canvasBattery"></canvas>
             <div id="dom_overlay_containerBattery">
@@ -340,47 +340,8 @@
     </div>
 </section>
 
-<section id="vos" class="xd-section sec11">
-    <div class="info s11-info mg-center">
-        <div class="h2">VOS: more advanced, <br />more intuitive.</div>
-        <div class="xd-txt">
-            VOS combines the simplicity of Android with extra features that make the interface more comfortable and
-            intuitive. Choose how to navigate your mobile and interact with your apps more smoothly. “Simple mode”
-            minimalises the interface even more and allows you to add contacts directly on the home screen.
-        </div>
-    </div>
-    <div class="vos-phone mg-center">
-        <img src="../images/joy-2-plus/vos-phone1.png" class="vos-phone-pic">
-        <img src="../images/joy-2-plus/vos-ui-right-1.png" id="right1" class="vos-right-1 abs">
-        <img src="../images/joy-2-plus/vos-ui-right-2.png" id="right2" class="vos-right-2 abs">
-        <img src="../images/joy-2-plus/vos-ui-left-1.png" id="left1" class="vos-left-1 abs">
-        <img src="../images/joy-2-plus/vos-ui-left-2.png" id="left2" class="vos-left-2 abs">
-    </div>
-</section>
-
 <section id="thong-so" class="xd-section">
     <div class="xd-wrap">
-        <div class="ts-header">
-            <div class="ts-header-info">
-                <div class="h2 vicon-1">Vsmart App</div>
-                <div class="xd-txt">
-                    With the Vsmart App, you can get consulting information about your device, activate the
-                    guarantee or request an appointment in the technical assistance service quickly and easily.
-                </div>
-            </div>
-            <div class="ts-header-info">
-                <div class="h2 vicon-2">VinID Sync</div>
-                <div class="xd-txt">
-                    With VinID it synchronizes all your contents in an easy and safe way: calendars, images, SMS, contacts. In addition, VinID is also used as a payment method for many services in VinGroup ecosystem and Partners.
-                </div>
-            </div>
-            <div class="ts-header-info">
-                <div class="h2 vicon-3">Dual App</div>
-                <div class="xd-txt">
-                    You can use two different accounts in the same application as in WhatsApp.
-                </div>
-            </div>
-        </div>
         <div class="ts-info-box">
             <div class="ts-info">
                 <div class="ts-info-col">
