--- a/live/index.html
+++ b/live/index.html
@@ -169,7 +169,7 @@
         <img src="../images/live/s1-phone-1.png" class="s1-phone-1 abs">
         <img src="../images/live/s1-phone-as.png" class="s1-phone-as abs">
         <div class="video-btn mg-center">
-            <a data-video="https://www.youtube.com/embed/dLrS5ZBcwZs?rel=0;&autoplay=1" class="vd-btn">
+            <a data-video="https://www.youtube.com/embed/Bw2x5t_g_l8?rel=0;&autoplay=1" class="vd-btn">
                 Смотреть видео
             </a>
         </div>
@@ -219,9 +219,9 @@
 
 <section id="camera-triple" class="xd-section sec3">
     <p class="h2 mg-center">ТРОЙНАЯ КАМЕРА <br />ДЛЯ ПРОФЕССИОНАЛЬНОЙ СЪЕМКИ</p>
-    <div class="desc xd-txt mg-center">Раскройте весь свой потенциал тройной камеры Live. Первая - делает впечатляющие снимки благодаря 48 Мп. Вторая - размывает фон снимка, генерируя эффект боке и обеспечивает отличный результат даже в темное время суток. Ультра-широкоугольный объектив третьей камеры захватывает панорамные изображения. Три камеры для профессиональной съемки.</div>
+    <div class="desc xd-txt mg-center">Раскройте весь свой потенциал тройной камеры Live. Первая - делает впечатляющие снимки благодаря 48Мп. Вторая - размывает фон снимка, генерируя эффект боке и обеспечивает отличный результат даже в темное время суток. Ультра-широкоугольный объектив третьей камеры захватывает панорамные изображения. Три камеры для профессиональной съемки.</div>
     <div class="s3-phone mg-center">
-        <img src="../images/live/s3-phone.jpg" class="s3-phone-pic">
+        <img src="../images/live/s3-phone-ru.jpg" class="s3-phone-pic">
     </div>
 </section>
 
@@ -229,7 +229,7 @@
     <div class="h2 mg-center">РЕЖИМ НОЧНОЙ СЪЕМКИ</div>
     <div class="desc xd-txt mg-center">Делайте отличные фотографии даже ночью. Четкое изображение с высоким уровнем детализации при плохом освещении обеспечивается сочетанием диафрагмы f/1,7, технологии пиксельного биннинга и размера пикселя 1,6 мкм в основной камере 48Мп. Технология Super Night Mode автоматически захватывает несколько снимков и объединяет в один, что гарантирует оптимальную четкость даже в темное время суток.</div>
     <div class="s4-phone mg-center">
-        <img src="../images/live/s4-phone.jpg" class="s4-phone-pic">
+        <img src="../images/live/s4-phone-ru.jpg" class="s4-phone-pic">
     </div>
 </section>
 
@@ -259,7 +259,7 @@
         <span>РЕЖИМ БЬЮТИФИКАЦИИ</span>
     </div>
     <div class="s6-icons mg-center">
-        <img src="../images/live/s6-icons.png" class="s6-icons-pic">
+        <img src="../images/live/live-s6-icons-ru.png" class="s6-icons-pic">
     </div>
 </section>
 
