--- a/star/index.html
+++ b/star/index.html
@@ -423,22 +423,22 @@
                             <li class="fadeIn">
                                 <img class="cmPic fs-lazy"
                                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                     data-src="../images/star/face-1.png" alt="">
+                                     data-src="../images/star/face-1-ru.png" alt="">
                             </li>
                             <li class="fadeIn">
                                 <img class="cmPic fs-lazy"
                                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                     data-src="../images/star/face-2.png" alt="">
+                                     data-src="../images/star/face-2-ru.png" alt="">
                             </li>
                             <li class="fadeIn">
                                 <img class="cmPic fs-lazy"
                                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                     data-src="../images/star/face-3.png" alt="">
+                                     data-src="../images/star/face-3-ru.png" alt="">
                             </li>
                             <li class="fadeIn">
                                 <img class="cmPic fs-lazy"
                                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                                     data-src="../images/star/face-4.png" alt="">
+                                     data-src="../images/star/face-4-ru.png" alt="">
                             </li>
                         </ul>
                     </div>
