about us translation

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -172,27 +172,24 @@
     <div class="info-wrap">
         <div class="box-1">
             <div class="h1 gold">
-                <span>ABOUT <span class="nowrap">VINGROUP CORPORATION</span></span>
+                <span class="nowrap">Корпорация Vingroup</span>
             </div>
-            <p class="xd-txt">
-                Vingroup's predecessor is Technocom Group founded in 1993 in Ukraine. In the early 2000s, Technocom returned to Vietnam, concentrating on investing in tourism and real estate with two original strategic brands, named Vinpearl and Vincom. In January 2012, both of them merged with each other and officially operated under the name of Vingroup
-                Corporation - <span class="nowrap">a Joint Stock Company.</span>
-            </p>
-            <p class="xd-txt">Vingroup is one of Asia's largest multi-sector private economic groups with a market capitalization of nearly US $ 16 billion. The Group operates in 3 core business areas, including:</p>
-            <div class="xd-txt v-list"><span>Technology</span><span>Industry</span><span>Trade and Services</span></div>
-            <p class="xd-txt">Vingroup’s plays an integral part in Vietnam’s economy, accounting for 2.2% of Vietnam’s total GDP in 2019. Vingroup’s listed entities account for 22% of total market capitalization on the Ho Chi Minh Stock Exchange. We are the largest private Vietnamese employer with approximately 51,100 employees.</p>
+            <p class="xd-txt">В настоящее время корпорация Vingroup является крупнейшей частной корпорацией Вьетнама, а также входит в шестерку крупнейших компаний Вьетнама в целом.</p>
+            <p class="xd-txt">Vingroup-одна из крупнейших в Азии многосекторных частных экономических групп с рыночной капитализацией почти в 16 миллиардов долларов США. Группа осуществляет свою деятельность по 3 основным направлениям деятельности, в том числе:</p>
+            <div class="xd-txt v-list"><span>Высокие технологии</span><span>Промышленность</span><span>Торговля и услуги</span></div>
+            <p class="xd-txt">Корпорация играет ключевую роль в экономике Вьетнама. Доля Vingroup в общем ВВП страны составила в 2019г 2,2%.. Листинговые компании Vingroup составляют 22% от общей рыночной капитализации на фондовой бирже Хошимина. Компания  являемся крупнейшим частным вьетнамским работодателем с количеством сотрудников более 50 000 человек.</p>
         </div>
         <div class="box-2">
             <div class="group-logo s1">
-                <div class="h3">TECHNOLOGY</div>
+                <div class="h3">ТЕХНОЛОГИИ</div>
                 <img src="../images/about-us/s1-group-1.png" class="group-1-pic">
             </div>
             <div class="group-logo s2">
-                <div class="h3">INDUSTRY</div>
+                <div class="h3">ПРОМЫШЛЕННОСТЬ</div>
                 <img src="../images/about-us/s1-group-2.png" class="group-2-pic">
             </div>
             <div class="group-logo s3">
-                <div class="h3">TRADE AND SERVICES</div>
+                <div class="h3">ТОРГОВЛЯ И УСЛУГИ</div>
                 <img src="../images/about-us/s1-group-3.png" class="group-3-pic">
             </div>
         </div>
@@ -201,23 +198,19 @@
 
 <section id="" class="xd-section sec2">
     <div class="info-box">
-        <div class="h2">THE GROUP</div>
         <div class="h1 gold">
-            <span>VINSMART<br />CONNECTED INTELLIGENCE</span>
+            <span>VINSMART <br />ТЕХНОЛОГИИ, МЕНЯЮЩИЕ РЕАЛЬНОСТЬ</span>
         </div>
         <div class="xd-txt">
-            A dynamic company with a global perspective, backed by  huge assets & experience. We use advanced technology  to create products for everyone. Products full of innovation & surprise, that transform the way we live.<br /><br />
-            Seamlessly connecting everyone to everything.
+            Основной представитель Vingroup на&nbsp;мировой арене в&nbsp;рамках глобальной миссии по&nbsp;разработке и&nbsp;производству экосистемы смарт-устройств, которая объединяет смартфоны, носимые устройства, бытовую, аудио- и&nbsp;видеотехнику, медицинское оборудование.<br /><br />
+            Продукты под брендом Vsmart от и&nbsp;до создаются во&nbsp;Вьетнаме на&nbsp;собственном производстве полного цикла и&nbsp;отвечают самым высоким европейским стандартам.
         </div>
     </div>
 </section>
 
 <section id="" class="xd-section sec3">
     <div class="info-box">
-        <div class="h2"><big>Our Products & Services Portfolio</big></div>
-        <div class="h1 gold">
-            <span>WE’VE MADE OUR MARK <span class="nowrap">IN MANY WAYS</span></span>
-        </div>
+        <div class="h2"><big>СФЕРЫ ДЕЯТЕЛЬНОСТИ VSMART</big></div>
         <div class="pro-list">
             <img src="../images/about-us/s3-list.jpg" class="xd-pc">
             <img src="../images/about-us/s3-list-mb.jpg" class="xd-mb">
@@ -228,32 +221,25 @@
 <section id="" class="xd-section sec4">
     <div class="info-box">
         <div class="h1 gold">
-            <span>MODERN FACTORY COMPLEX</span>
+            <span>ПРОИЗВОДСТВЕННЫЙ КОМПЛЕКС ПОЛНОГО ЦИКЛА</span>
         </div>
         <div class="factory-list">
-            <div class="fact xd-txt">
-                Owning a complex of smart electronics factories in Hoa Lac Hi-Tech Park which is invested more than 300 million dollars.
-            </div>
-            <div class="fact xd-txt">
-                Vinsmart has the ability to produce from 23 million units in 2019 and 125 million units in 2020.
-            </div>
-            <div class="fact xd-txt">
-                With over 1000+ local & international engineers & experts, along with an experienced management team with proven success.
-            </div>
+            <div class="fact xd-txt">Инвестиции в комплекс заводов умной электроники в Парке высоких технологий Hoa Lac составили более 300 миллионов долларов.</div>
+            <div class="fact xd-txt">Производственная мощность завода в 2020г составляет 125 миллионов устройств в год.</div>
+            <div class="fact xd-txt">Персонал завода – более 1000 высококвалифицированных локальных и международных инженеров и экспертов.</div>
         </div>
     </div>
 </section>
 
 <section id="" class="xd-section sec5">
     <div class="info-box">
-        <div class="h2">OUR PRIDE</div>
+        <div class="h2">Наша гордость</div>
         <div class="h1 gold">
-            <span>WE’RE PROUD TO BE<br />MADE IN VIETNAM</span>
+            <span>ПРОИЗВЕДЕНО <br />ВО&nbsp;ВЬЕТНАМЕ</span>
         </div>
         <div class="xd-txt">
-            In Vietnam, we’re taught strength, compassion and to stand united.<br /><br />
-            It’s that attitude that ensures we tackle every challenge  head on and create best-in-class products. Products that integrate advanced technology, the best materials &  premium design.<br /><br />
-            A Vsmart product will always show our commitment to  you & <span class="nowrap">give you the best.</span>
+            История Вьетнама научила нас силе, сплоченности и заботе о близких.<br /><br />
+            Эти базовые ценности отражены в нашей миссии: предлагать миру продукты, которые сочетают в себе передовые технологии, лучшие компоненты, высокое качество и премиальный дизайн по доступной цене.
         </div>
     </div>
 </section>
