--- a/about-us/index.html
+++ b/about-us/index.html
@@ -174,10 +174,10 @@
             <div class="h1 gold">
                 <span class="nowrap">Корпорация Vingroup</span>
             </div>
-            <p class="xd-txt">В настоящее время корпорация Vingroup является крупнейшей частной корпорацией Вьетнама, а также входит в шестерку крупнейших компаний Вьетнама в целом.</p>
-            <p class="xd-txt">Vingroup-одна из крупнейших в Азии многосекторных частных экономических групп с рыночной капитализацией почти в 16 миллиардов долларов США. Группа осуществляет свою деятельность по 3 основным направлениям деятельности, в том числе:</p>
+            <p class="xd-txt">В&nbsp;настоящее время Vingroup - это крупнейшая частная корпорация Вьетнама. Она входит в&nbsp;шестерку крупнейших компаний страны.</p>
+            <p class="xd-txt">Vingroup - одна из&nbsp;крупнейших в&nbsp;Азии многосекторных частных экономических групп с&nbsp;рыночной капитализацией почти в&nbsp;16&nbsp;миллиардов долларов США. Группа осуществляет свою деятельность по&nbsp;3&nbsp;основным направлениям деятельности:</p>
             <div class="xd-txt v-list"><span>Высокие технологии</span><span>Промышленность</span><span>Торговля и услуги</span></div>
-            <p class="xd-txt">Корпорация играет ключевую роль в экономике Вьетнама. Доля Vingroup в общем ВВП страны составила в 2019г 2,2%.. Листинговые компании Vingroup составляют 22% от общей рыночной капитализации на фондовой бирже Хошимина. Компания  являемся крупнейшим частным вьетнамским работодателем с количеством сотрудников более 50 000 человек.</p>
+            <p class="xd-txt">Корпорация играет ключевую роль в&nbsp;экономике Вьетнама. Доля Vingroup в&nbsp;общем ВВП страны составила в&nbsp;2019&nbsp;г 2,2%. Капитализация различных активов Vingroup составляет 22% от&nbsp;общей рыночной капитализации на&nbsp;фондовой бирже Хошимина. Компания являемся крупнейшим частным вьетнамским работодателем с&nbsp;количеством сотрудников более 50&nbsp;000 человек.</p>
         </div>
         <div class="box-2">
             <div class="group-logo s1">
@@ -199,7 +199,7 @@
 <section id="" class="xd-section sec2">
     <div class="info-box">
         <div class="h1 gold">
-            <span>VINSMART <br />ТЕХНОЛОГИИ, МЕНЯЮЩИЕ РЕАЛЬНОСТЬ</span>
+            <span>VINSMART: <br />ТЕХНОЛОГИИ, МЕНЯЮЩИЕ РЕАЛЬНОСТЬ</span>
         </div>
         <div class="xd-txt">
             Основной представитель Vingroup на&nbsp;мировой арене в&nbsp;рамках глобальной миссии по&nbsp;разработке и&nbsp;производству экосистемы смарт-устройств, которая объединяет смартфоны, носимые устройства, бытовую, аудио- и&nbsp;видеотехнику, медицинское оборудование.<br /><br />
@@ -212,8 +212,8 @@
     <div class="info-box">
         <div class="h2"><big>СФЕРЫ ДЕЯТЕЛЬНОСТИ VSMART</big></div>
         <div class="pro-list">
-            <img src="../images/about-us/s3-list.jpg" class="xd-pc">
-            <img src="../images/about-us/s3-list-mb.jpg" class="xd-mb">
+            <img src="../images/about-us/s3-list-ru.jpg" class="xd-pc">
+            <img src="../images/about-us/s3-list-ru-mb.jpg" class="xd-mb">
         </div>
     </div>
 </section>
