--- a/joy-2-plus/index.html
+++ b/joy-2-plus/index.html
@@ -432,8 +432,7 @@
                         Адаптер Quick Charge™ 3.0<br />
                         Кабель USB Type-C<br />
                         Гарнитура<br />
-                        Краткое руководство пользователя<br />
-                        Чехол
+                        Краткое руководство пользователя
                     </div>
                 </div>
             </div>
